--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/womba-womba/odds#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
     "pug": "^2.0.3"
